Removed Northwest Property Management / SEO Tweaks

--- a/html/index.html
+++ b/html/index.html
@@ -8,10 +8,12 @@
     <meta name="description" content="Located in the far west Chicago suburb of Batavia, the Kirkland Chase Courtyard Townhomes offer a blend of Fox Valley charm and Chicago sensibility." />
     <meta name="keywords" content="kccta kirkland chase courtyard townhome association batavia illinois" />
     <meta name="author" content="Kirkland Chase Courtyard Townhome Association" />
+    <meta name="robots" content="index, follow" />
     <meta property="og:title" content="Kirkland Chase Courtyard Townhome Association" />
     <meta property="og:description" content="Located in the far west Chicago suburb of Batavia, the Kirkland Chase Courtyard Townhomes offer a blend of Fox Valley charm and Chicago sensibility." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="./logo.png" />
+    <link href="https://kccta.netlify.app" rel="canonical" />
     <link href="./favicon.ico" type="image/x-icon" rel="icon" />
     <link href="./bootstrap.min.css" type="text/css" rel="stylesheet" />
     <link href="./index.css" type="text/css" rel="stylesheet" />
@@ -69,11 +71,11 @@
     </nav>
     <div id="section-top">
         <div id="brand-jumbotron" class="jumbotron bg-light text-center">
-            <h1>
+            <p class="h1">
                 Kirkland Chase Courtyard Townhome Association
                 <br />
                 <span class="text-muted">Batavia, IL 60510</span>
-            </h1>
+            </p>
         </div>
         <div class="card w-90 mx-auto">
             <div class="card-body">
@@ -142,27 +144,10 @@
             <div class="card-body">
                 <h2 class="card-title text-center">Contact</h2>
                 <div class="card-text container text-center">
-                    <h3 class="text-muted">Property Management</h3>
-                    <p>
-                        <a href="https://www.northwestpropertymanagement.net" target="_blank"><img class="img-fluid rounded mx-auto" src="./northwest-property-management.png" title="Northwest Property Management" alt="Northwest Property Management" /></a>
-                    </p>
-                    <p>
-                        KCCTA employs <a href="https://www.northwestpropertymanagement.net" target="_blank">Northwest Property Management</a> as their association property manager. Details about dues, maintenance requests and other information is available on their website.
-                    </p>
-                    <p>
-                        <dl>
-                            <dt>Contact Form</dt>
-                            <dd><a href="https://www.northwestpropertymanagement.net/request-work-order-or-questions/" target="_blank">Click Here</a></dd>
-                            <dt>Telephone</dt>
-                            <dd><a href="tel:6304026558">630-402-6558</a></dd>
-                        </dl>
-                    </p>
-                    <hr />
-                    <h3 class="text-muted">Board Of Directors</h3>
                     <p>
                         Members of KCCTA's three-member board serve three-year rotating terms, with one member elected each year at the annual meeting of homeowners. They hold the positions of president, secretary and treasurer.
                     </p>
-                    <h4>2023 Board Members</h4>
+                    <h3 class="text-muted"">2023 Board Members</h3>
                     <dl>
                         <dt>President</dt>
                         <dd>Lauren Lentine</dd>
