--- a/html/index.html
+++ b/html/index.html
@@ -147,7 +147,7 @@
                     <p>
                         Members of KCCTA's three-member board serve three-year rotating terms, with one member elected each year at the annual meeting of homeowners. They hold the positions of president, secretary and treasurer.
                     </p>
-                    <h3 class="text-muted"">2023 Board Members</h3>
+                    <h3 class="text-muted">2023 Board Members</h3>
                     <dl>
                         <dt>President</dt>
                         <dd>Lauren Lentine</dd>
