Updated Board Members And Copyright

--- a/html/index.html
+++ b/html/index.html
@@ -147,14 +147,14 @@
                     <p>
                         Members of KCCTA's three-member board serve three-year rotating terms, with one member elected each year at the annual meeting of homeowners. They hold the positions of president, secretary and treasurer.
                     </p>
-                    <h3 class="text-muted">2024 Board Members</h3>
+                    <h3 class="text-muted">2025 Board Members</h3>
                     <dl>
                         <dt>President</dt>
                         <dd>Lauren Lentine</dd>
                         <dt>Secretary</dt>
                         <dd>Mark Lampert</dd>
                         <dt>Treasurer</dt>
-                        <dd>Geoff Anton</dd>
+                        <dd>Jenny Iles</dd>
                     </dl>
                 </div>
             </div>
@@ -220,7 +220,7 @@
     <br />
     <footer id="footer" class="footer py-3 mt-auto">
         <div class="container text-center">
-            <p class="text-muted">© 2024 Kirkland Chase Courtyard Townhome Association</p>
+            <p class="text-muted">© 2025 Kirkland Chase Courtyard Townhome Association</p>
             <p class="text-muted">Source On <a href="https://github.com/IronManRust/kccta" target="_blank">GitHub</a> | Hosted By <a href="https://www.netlify.com" target="_blank">Netlify</a></p>
         </div>
     </footer>
